[tool.poetry]
name = "vertex-sampler"
version = "0.1.0"
description = ""
authors = ["gzlcp <gzltmgzl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
networkx = "^3.0"
click = "^8.1.3"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
